# Logistixai

./: .gitignore  BACKEND_IMPLEMENTATION_PLAN.md  FONT_CONFIGURATION.md  FONT_FIX_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  MCP_INTEGRATION_SUMMARY.md  MCP_QUICK_START.md  MCP_TROUBLESHOOTING.md  PDF_FEATURE_SUMMARY.md  PDF_GENERATION_GUIDE.md  README.md  requirements.txt  run_backend.bat  run_backend.sh  simplified_models.py  specification.md
.claude/: settings.local.json
backend/: __init__.py  config.py  main.py  mcp_client.py  mcp_config.py  pyproject.toml  requirements.txt  routes.py  vector_db.py
backend/agents/: __init__.py  chat_agent.py  report_agent.py  search_agent.py  search_agent_mcp.py  validator_agent.py
backend/app/: main.py
backend/services/: __init__.py  chat_service.py  pdf_service.py  report_service.py  test_fonts.py
data/: company_profile.json
data/chat_history/: c8d920f8-ae76-4f1b-96f0-ccf4627d2d63_chat.json
data/chroma_data/: chroma.sqlite3
data/reports/: 05d6cac8-1252-4d63-8b1b-0f492c75c991.json  259639d2-5cf2-4af4-b1fc-9794fc4e85a5.json  6afe234b-5610-4c76-83c5-e89186577038.json  6f9ea225-5f89-4ef1-bbb9-0825bacee707.json  7eb99686-bc73-4ef3-99a9-886fbb50fdd0.json  85280bdd-e91b-4c8c-8f30-e7b92f86a59e.json  9d289188-2153-4d0b-8108-b38be5b61b9d.json  (+1 more)
v0-logistics-ai-reports-fx/: API_QUICK_REFERENCE.md  BACKEND_INTEGRATION.md  POLLING_FIX_SUMMARY.md  README.md  REPORT_DETAIL_PAGE_FIX.md  package-lock.json  package.json  pnpm-lock.yaml
(+25 files in other folders)
