[project]
name = "logistic-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.18.1",
    "chromadb==0.4.22",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.104.1",
    "httpx==0.25.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "reportlab>=4.4.4",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "numpy==1.26.4",
]
